<resources>
    <string name="app_name">中介笔记</string>

    <string name="smoothlistview_header_hint_normal">下拉刷新</string>
    <string name="smoothlistview_header_hint_ready">松开刷新数据</string>
    <string name="smoothlistview_header_hint_loading">正在加载...</string>
    <string name="smoothlistview_header_last_time">上次更新时间：</string>
    <string name="smoothlistview_footer_hint_normal">查看更多</string>
    <string name="smoothlistview_footer_hint_ready">松开载入更多</string>
    <string name="activity_userinfo">修改密码</string>
    <string name="activity_settings">设置</string>

    <string name="input_username">用户名</string>
    <string name="input_password">密码</string>
    <string name="input_password_r">确认密码</string>
    <string name="btn_pwd">修改</string>
    <string name="btn_login">登录</string>
    <string name="btn_register">注册</string>
    <string name="no_register">没有注册,立即注册>></string>
    <string name="back_login">已经注册,返回登录>></string>

    <string name="filter_date">预约筛选</string>

    <string name="empty_username">用户名不能为空</string>
    <string name="empty_password">密码不能为空</string>
    <string name="empty_password2">确认密码不能为空</string>
    <string name="agree_password">密码不一致</string>
    <string name="error_user_pass">用户名或者密码输入错误</string>
    <string name="register_name_digits">0123456789qwertyuiopasdfghjklzxcvbnm</string>

    <string name="input_search_hint">请输入搜索内容</string>

    <string name="activity_login">登录</string>
    <string name="activity_register">注册</string>
    <string name="activity_addcustomer">添加客户</string>
    <string name="activity_editcustomer">编辑客户</string>
    <string name="activity_about">关于我们</string>
    <string name="activity_fitterdate">预约日期筛选</string>

    <string name="menu_sync">同步</string>
    <string name="menu_search">搜索</string>
    <string name="menu_date">日期</string>
    <string name="menu_insertphone">导入</string>

    <string name="pwd_hint_old">请输入旧密码</string>
    <string name="pwd_hint_new">请输入新密码</string>
    <string name="pwd_hint_new_two">请重新输入新密码</string>

    <string name="add_hint_name">请输入客户名称</string>
    <string name="add_error_name">客户名称不能为空</string>

    <string name="add_hint_phonenumber">请输入手机号或者导入手机号</string>
    <string name="add_error_phonenumber">手机号输入错误</string>
    <string name="add_empty_phonenumber">手机号不能为空</string>

    <string name="add_select_houseArea">请选择购房面积</string>

    <string name="add_select_desire">请选择购房时间</string>

    <string name="add_select_orderdate">请选择预约日期</string>

    <string name="action_phone">导入手机号</string>

    <string-array name="phonetypearr">
        <item>来电</item>
        <item>已拨</item>
        <item>未接</item>
    </string-array>

</resources>
