<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">

    <item
        android:id="@+id/action_date"
        android:icon="@mipmap/ic_action_go_to_today"
        android:orderInCategory="100"
        android:title="@string/menu_date"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_sync"
        android:icon="@mipmap/ic_action_refresh"
        android:orderInCategory="100"
        android:title="@string/menu_sync"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_search"
        android:icon="@mipmap/ic_action_search"
        android:orderInCategory="100"
        android:title="@string/menu_search"
        app:showAsAction="ifRoom" />
</menu>