<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/app_background">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="16dp">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_layout_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/input_edit_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/add_hint_name" />

            </android.support.design.widget.TextInputLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center">
                <android.support.design.widget.TextInputLayout
                    android:id="@+id/input_layout_phonenumber"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1">
                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/input_edit_phonenumber"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/add_hint_phonenumber" />

                </android.support.design.widget.TextInputLayout>
                <Button
                    style="@style/Mybutton_fill_small"
                    android:layout_width="50dp"
                    android:layout_height="30dp"
                    android:layout_marginLeft="16dp"
                    android:text="导入"/>
            </LinearLayout>

            <RelativeLayout
                android:id="@+id/view_housearea"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_marginTop="8dp"
                android:background="@color/app_white">
                <TextView
                    android:id="@+id/tv_str_housearea"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/add_select_houseArea"
                    android:layout_centerVertical="true"
                    android:layout_alignParentLeft="true"
                    android:layout_marginLeft="16dp"/>

                <TextView
                    android:id="@+id/tv_housearea"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text=""
                    android:textColor="@color/app_theme_color"
                    android:textSize="15sp"
                    android:layout_centerVertical="true"
                    android:layout_toRightOf="@id/tv_str_housearea"
                    android:layout_marginLeft="16dp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text=" 平米"
                    android:textColor="@color/app_theme_color"
                    android:textSize="15sp"
                    android:layout_centerVertical="true"
                    android:layout_toRightOf="@id/tv_housearea"/>
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@mipmap/ic_action_next_item"
                    android:layout_centerVertical="true"
                    android:layout_alignParentRight="true"
                    android:layout_marginRight="16dp"/>
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/view_desire"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_marginTop="8dp"
                android:background="@color/app_white">
                <TextView
                    android:id="@+id/tv_str_desire"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/add_select_houseArea"
                    android:layout_centerVertical="true"
                    android:layout_alignParentLeft="true"
                    android:layout_marginLeft="16dp"/>

                <TextView
                    android:id="@+id/tv_desire"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text=""
                    android:textColor="@color/app_theme_color"
                    android:textSize="15sp"
                    android:layout_centerVertical="true"
                    android:layout_toRightOf="@id/tv_str_desire"
                    android:layout_marginLeft="16dp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text=" 个月以内"
                    android:textColor="@color/app_theme_color"
                    android:textSize="15sp"
                    android:layout_centerVertical="true"
                    android:layout_toRightOf="@id/tv_desire"/>
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@mipmap/ic_action_next_item"
                    android:layout_centerVertical="true"
                    android:layout_alignParentRight="true"
                    android:layout_marginRight="16dp"/>
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/layout_orderdate"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_marginTop="8dp"
                android:background="@color/app_white">
                <TextView
                    android:id="@+id/tv_str_orderdate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/add_select_orderdate"
                    android:layout_centerVertical="true"
                    android:layout_alignParentLeft="true"
                    android:layout_marginLeft="16dp"/>

                <TextView
                    android:id="@+id/tv_orderDate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text=""
                    android:textColor="@color/app_theme_color"
                    android:textSize="15sp"
                    android:layout_centerVertical="true"
                    android:layout_toRightOf="@id/tv_str_orderdate"
                    android:layout_marginLeft="16dp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text=""
                    android:textColor="@color/app_theme_color"
                    android:textSize="15sp"
                    android:layout_centerVertical="true"
                    android:layout_toRightOf="@id/tv_orderDate"/>
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@mipmap/ic_action_next_item"
                    android:layout_centerVertical="true"
                    android:layout_alignParentRight="true"
                    android:layout_marginRight="16dp"/>
            </RelativeLayout>

            <EditText
                android:id="@+id/edit_describe"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:background="@color/app_white"
                android:padding="8dp"
                android:paddingLeft="16dp"
                android:hint="请输入客户描述"
                android:gravity="left"
                android:minLines="5"/>
        </LinearLayout>
    </ScrollView>
</LinearLayout>