<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/app_background">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="16dp">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:background="@drawable/view_bg_fill_white_default">

                <EditText
                    android:id="@+id/input_edit_name"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:background="@color/app_white"
                    android:hint="@string/add_hint_name"
                    android:textSize="14sp"
                    android:paddingLeft="16dp"
                    android:singleLine="true"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/app_line_backgroud"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="16dp"/>
                <LinearLayout
                    android:gravity="center"
                    android:layout_marginRight="6dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <EditText
                        android:id="@+id/input_edit_phonenumber"
                        android:layout_width="wrap_content"
                        android:layout_weight="1"
                        android:layout_height="40dp"
                        android:background="@color/app_white"
                        android:hint="@string/add_hint_phonenumber"
                        android:textSize="14sp"
                        android:paddingLeft="16dp"
                        android:singleLine="true"/>

                    <ImageButton
                        android:id="@+id/img_input_phone"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@mipmap/ic_action_phone"
                        android:scaleType="fitXY"/>

                </LinearLayout>


            </LinearLayout>


            <LinearLayout
                android:layout_marginTop="8dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:background="@drawable/view_bg_fill_white_default">

                <RelativeLayout
                    android:background="@drawable/view_bg_fill_white"
                    android:id="@+id/view_housearea"
                    android:layout_width="match_parent"
                    android:layout_height="45dp">
                    <TextView
                        android:id="@+id/tv_str_housearea"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/add_select_houseArea"
                        android:layout_centerVertical="true"
                        android:layout_alignParentLeft="true"
                        android:layout_marginLeft="16dp"/>

                    <TextView
                        android:id="@+id/tv_housearea"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text=""
                        android:textColor="@color/app_theme_color"
                        android:textSize="15sp"
                        android:layout_centerVertical="true"
                        android:layout_toRightOf="@id/tv_str_housearea"
                        android:layout_marginLeft="16dp"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text=" 平米"
                        android:textColor="@color/app_theme_color"
                        android:textSize="15sp"
                        android:layout_centerVertical="true"
                        android:layout_toRightOf="@id/tv_housearea"/>
                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@mipmap/ic_action_next_item"
                        android:layout_centerVertical="true"
                        android:layout_alignParentRight="true"
                        android:layout_marginRight="16dp"/>
                </RelativeLayout>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/app_line_backgroud"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="16dp"/>

                <RelativeLayout
                    android:id="@+id/view_desire"
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:background="@drawable/view_bg_fill_white">
                    <TextView
                        android:id="@+id/tv_str_desire"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/add_select_houseArea"
                        android:layout_centerVertical="true"
                        android:layout_alignParentLeft="true"
                        android:layout_marginLeft="16dp"/>

                    <TextView
                        android:id="@+id/tv_desire"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text=""
                        android:textColor="@color/app_theme_color"
                        android:textSize="15sp"
                        android:layout_centerVertical="true"
                        android:layout_toRightOf="@id/tv_str_desire"
                        android:layout_marginLeft="16dp"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text=" 个月以内"
                        android:textColor="@color/app_theme_color"
                        android:textSize="15sp"
                        android:layout_centerVertical="true"
                        android:layout_toRightOf="@id/tv_desire"/>
                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@mipmap/ic_action_next_item"
                        android:layout_centerVertical="true"
                        android:layout_alignParentRight="true"
                        android:layout_marginRight="16dp"/>
                </RelativeLayout>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/app_line_backgroud"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="16dp"/>
                <RelativeLayout
                    android:id="@+id/layout_orderdate"
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:background="@drawable/view_bg_fill_white">
                    <TextView
                        android:id="@+id/tv_str_orderdate"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/add_select_orderdate"
                        android:layout_centerVertical="true"
                        android:layout_alignParentLeft="true"
                        android:layout_marginLeft="16dp"/>

                    <TextView
                        android:id="@+id/tv_orderDate"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text=""
                        android:textColor="@color/app_theme_color"
                        android:textSize="15sp"
                        android:layout_centerVertical="true"
                        android:layout_toRightOf="@id/tv_str_orderdate"
                        android:layout_marginLeft="16dp"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text=""
                        android:textColor="@color/app_theme_color"
                        android:textSize="15sp"
                        android:layout_centerVertical="true"
                        android:layout_toRightOf="@id/tv_orderDate"/>
                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@mipmap/ic_action_next_item"
                        android:layout_centerVertical="true"
                        android:layout_alignParentRight="true"
                        android:layout_marginRight="16dp"/>
                </RelativeLayout>

            </LinearLayout>



            <EditText
                android:id="@+id/edit_describe"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:background="@drawable/view_bg_fill_white_default"
                android:padding="16dp"
                android:textSize="14sp"
                android:hint="请输入客户描述"
                android:gravity="left"/>
        </LinearLayout>
    </ScrollView>
</LinearLayout>